--- a/app/scripts/components/buffer/template.mustache
+++ b/app/scripts/components/buffer/template.mustache
@@ -1,3 +1,5 @@
 <textarea class="$input input">
-# I am a header!
+# Hello!  I am Markdown!
+
+Go ahead and __edit me__.  I update as you type!
 </textarea>
