--- a/app/scripts/components/buffer/template.mustache
+++ b/app/scripts/components/buffer/template.mustache
@@ -1,5 +1,4 @@
 <textarea class="$input input">
 # Hello!  I am Markdown!
 
-Go ahead and __edit me__.  I update as you type!
-</textarea>
+Go ahead and __edit me__.  I update as you type!</textarea>
