--- a/app/scripts/components/container/template.mustache
+++ b/app/scripts/components/container/template.mustache
@@ -1,2 +1,4 @@
+<h1>Marker</h1>
+<h2>(a markdown editor)</h2>
 <div class="$buffer buffer"></div>
 <div class="$renderedOutput rendered-output"></div>
