Add better default text.

--- a/app/scripts/components/buffer/template.mustache
+++ b/app/scripts/components/buffer/template.mustache
@@ -1,4 +1,6 @@
 <textarea class="$input input">
 # Hello!  I am Markdown!
 
-Go ahead and __edit me__.  I update as you type!</textarea>
+Go ahead and __edit me__.  I update as you type!
+
+This is a sample application built with [Lateralus](https://github.com/Jellyvision/lateralus), a super fun JavaScript application framework.  Check it out!</textarea>
